Cleanup javadoc warnings/errors