@@ -40,6 +40,7 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+test.jvmArgs = ["--illegal-access=deny"]
 
 jacocoTestCoverageVerification {
     violationRules {
